apps/web/src/components/pageBuilder/HeroStatic/styles.module.scss
.heroStatic {
  max-width: calc(var(--max-width) + var(--pageMargin) * 2);
  width: 100%;
  margin: 0 auto;
  height: 100%;
  position: relative;
  isolation: isolate;
  .header {
    position: relative;
    padding: 5rem var(--pageMargin) 3rem;
    z-index: 1;
    border-radius: 0 0 0.5rem 0.5rem;
    overflow: hidden;

    &:before {
      content: "";
      position: absolute;
      inset: 0;
      background: linear-gradient(
        0deg,
        rgba(0, 0, 0, 0.65) 0%,
        rgba(0, 0, 0, 0.65) 100%
      );
      z-index: -1;
    }

    .heading {
      font-size: var(--typography-header-l, 2.5rem);
      color: var(--neutral-white, #ffffff);
      margin-bottom: clamp(1.5rem, calc(1.75vw / 0.48), 2rem);
      font-weight: 400;
      max-width: 50.75rem;
      -webkit-text-stroke-width: 0;
      -webkit-text-stroke-color: transparent;
    }
    .description {
      font-size: var(--typography-body-m, 0.875rem);
      color: var(--neutral-white, #ffffff);
      max-width: 31.25rem;

      :global(h2) {
        font-size: var(--typography-body-xl, 1.125rem);
        margin-top: 0.75rem;
        margin-bottom: 0.5rem;
        color: var(--neutral-white, #ffffff);
        -webkit-text-stroke-width: 0;
        -webkit-text-stroke-color: transparent;
      }

      :global(.link) {
        color: var(--neutral-white, #ffffff);

        strong {
          color: var(--neutral-white, #ffffff);
        }

        &:hover {
          color: var(--primary-red, #fe0140);

          strong {
            color: var(--primary-red, #fe0140);
          }
        }

        &[target='_blank'] {
          &::after {
            content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24'%3E%3Cg stroke='%23f7f3f3'%3E%3Cpath d='M11 7H6a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2-2v-5M10 14 20 4M15 4h5v5'/%3E%3C/g%3E%3C/svg%3E");
          }
        }
      }
    }

    picture {
      width: 100%;
      height: auto;
      display: block;
      position: absolute;
      inset: 0;
      pointer-events: none;
      overflow: hidden;
      z-index: -2;
    }

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }

    &[data-has-blocks="true"] {
      padding-bottom: 8rem;
    }
  }

  .blocks {
    border-radius: 0.5rem;
    background-color: rgba(248, 248, 248, 0.85);
    backdrop-filter: blur(4px);
    padding: clamp(1rem, calc(2vw / 0.48), 2rem);
    margin: -4rem auto 0;
    width: calc(100% - 4rem);
    max-width: var(--max-width);
    z-index: 2;
    position: relative;

    .blocksHeading {
      margin-bottom: clamp(2rem, calc(2.5vw / 0.48), 3rem);
      color: var(--neutral-800, #303030);
      font-size: var(--typography-header-m, 1.5rem);
      font-weight: 500;
      font-family: var(--font-family-switzer);
      -webkit-text-stroke-width: 0;
      -webkit-text-stroke-color: transparent;
      text-align: left;
    }

    .list {
      display: grid;
      grid-template-columns: repeat(
        auto-fill,
        minmax(clamp(14rem, calc(14vw / 0.48), 18rem), 1fr)
      );
      gap: 0.75rem;

      .block {
        padding: 1rem;
        gap: 0.75rem;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        border-radius: 0.5rem;
        backdrop-filter: blur(10px);
        background-color: var(--neutral-white, #ffffff);
        .icon {
          width: 1.5rem;
          height: 1.5rem;
        }
        .heading {
          color: var(--neutral-black, #000000);
          font-size: var(--typography-body-xl, 1.125rem);
          font-weight: 400;
          line-height: 1.16;
          font-family: var(--font-family-poppins);
        }
        .description {
          font-size: var(--typography-body-m, 0.875rem);
        }
      }
    }
  }

  @media (max-width: 81.375rem) {
    .header {
      border-radius: 0;
    }
  }

  @media (max-width: 37.4375rem) {
    .blocks {
      width: calc(100% - 2rem);
    }
  }

  @media (max-width: 27.4375rem) {
    .blocks {
      width: 100%;
    }
  }
}

